--- a/css/resset.css
+++ b/css/resset.css
@@ -161,4 +161,42 @@ body {
   /* opcional */
   -moz-osx-font-smoothing: grayscale;
 }
- 
+
+/*hero*/
+
+.hero{
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(245, 71, 71);
+}
+
+.hero-wrapper{
+  max-width: 1200px;
+  background-color: rgb(255, 116, 116);
+}
+
+.hero-content{
+  background-color: rgb(217, 36, 36);
+}
+
+.hero-title{
+  background-color: rgb(142, 28, 28);
+}
+
+.hero-paragraph{
+  background-color: rgb(255, 80, 80);
+}
+
+.hero-button{
+  background-color: rgb(224, 76, 76);
+}
+
+.hero-porfile{
+  background-color: rgb(224, 43, 43);
+}
+
+.hero-image{
+  background-color: rgb(119, 15, 15);
+}
+
