--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,151 @@
 /*hero*/
 
-.hero{
-    width: 100%;
-    display: flex;
-    justify-content: center
-    background-color: rgb(245, 71, 71);
-  }
+.hero {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.hero-wrapper {
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.hero-content {
+  padding: 24px;
+}
+
+.hero-title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 64px;
+  color: var(#393939);
+  margin-bottom: 24px;
+}
+
+.hero-paragraph {
+  font-size: 18px;
+  line-height: 18px;
+  color: var(--negro);
+}
+
+.hero-button {
+  width: fit-content;
+  color: var(--blanco);
+  font-weight: 900;
+  padding: 12px 24px;
+  border-radius: 12px;
+}
+
+.hero-porfile {
+  background-color: rgb(224, 43, 43);
+}
+
+.hero-image {
+  background-color: rgb(119, 15, 15);
+}
+
+*/header*/ 
+
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.header-wrapper {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+}
+
+.header-brand {
+  width: 120px;
+}
+
+.header-nav {
+  display: flex;
+  gap: 24px;
+
+}
+
+.header-nav-item{
+	color: var(--negro);
+	padding: 12px 8px;
+}
+
+.header-nav-item:hover {
+	color: var(--carmen);
+}
+
+.header-nav-button{
+	color: var(--blanco);
+	font-weight: 900;
+	padding: 12px 24px;
+	border-radius: 12px;
+	background-color: var(--carmen);
+}
+
+.header-nav-button:hover {
+	background-color: var(--rojo);
+
+/*Main*/
+.main {
+  display: flex;
+  max-width: 1200px;
+  justify-content: center;
+}
+
+.main-wrapper {
+  width: 100%;
+  max-width: 1200px;
+}
+
+.service {
+}
+.servise title{
+  font-size: 48px;
+  color: var;
+
+}
+.service-content {
+  max-width: 600px;
+  margin-bottom: 24px;
+}
+
+.servise-cards {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap:24px;
   
-  .hero-wrapper{
-    max-width: 1200px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    background-color: rgb(255, 116, 116);
-  }
-  
-  .hero-content{
-    padding: 24px;
-    background-color: rgb(217, 36, 36);
-  }
-  
-  .hero-title{
-    font-size: 64px;
-    font-weight: 900;
-    line-height: 64px;
-    color: var(#393939);
-    margin-bottom: 24px;
-    background-color: rgb(142, 28, 28);
-  }
-  
-  .hero-paragraph{
-    font-size: 18px;
-    line-height: 18px;
-    color: var(--negro);
-    background-color: rgb(255, 80, 80);
-  }
-  
-  .hero-button{
-    width: fit-content;
-    color:var(--blanco);
-    font-weight: 900;
-    padding: 12px 24px;
-    border-radius: 12px;
-    background-color: rgb(224, 76, 76);
-  }
-  
-  .hero-porfile{
-    background-color: rgb(224, 43, 43);
-  }
-  
-  .hero-image{
-    background-color: rgb(119, 15, 15);
-  }
-  
-  
+}
+
+.servise-paragraph{
+font-size: 20px;
+line-height: 30px;
+color: var(--negro)
+}
+
+.service-item{
+  padding: 24px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 24px;
+  background-color: blue;
+}
+
+.servise image{
+  align-self: center;
+  max-width: 180px;
+}
+
+.servise subtittle{
+  font-size: 32px;
+  font-weight: 900;
+  color:var(--blanco)
+}
